[package]
name = "wowsunpack"
description = "Utility for interacting with World of Warships game assets"
version = "0.25.0"
repository = "https://github.com/landaire/wows-toolkit"
documentation = "https://docs.rs/wowsunpack/"
exclude = ["format_templates/"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "wowsunpack"
path = "src/lib.rs"

[[bin]]
name = "wowsunpack"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
clap = { workspace = true, optional = true }
flate2 = { workspace = true }
rootcause = { workspace = true }
memmap2 = { version = "0.9", optional = true }
thiserror = { workspace = true }
rayon = { version = "1.11", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
csv = { version = "1.4", optional = true }
glob = { workspace = true, optional = true }
pickled = { workspace = true, features = ["variantly"], optional = true }
winnow = { workspace = true, optional = true }
variantly = { version = "0.4", optional = true }
roxmltree = { workspace = true, optional = true }
tracing = { workspace = true }
itertools = { workspace = true, optional = true }
gettext = { workspace = true, optional = true }
convert_case = { workspace = true, optional = true }
regex = { version = "1.12.3", optional = true }
indicatif = { workspace = true, optional = true, features = ["rayon"] }
thread_local = { version = "1.1.9", optional = true }
rkyv = { workspace = true, optional = true }
bon = { workspace = true, optional = true }
meshopt-rs = { version = "0.1.2", optional = true }
gltf-json = { version = "1", optional = true, features = ["KHR_materials_variants", "KHR_texture_transform"] }
gltf = { version = "1", optional = true, features = ["KHR_materials_variants"] }
half = { version = "2", optional = true }
image_dds = { workspace = true, optional = true, features = ["ddsfile", "image"] }
image = { workspace = true, optional = true, features = ["png"] }
unidecode = { version = "0.3", optional = true }
vfs = { version = "0.12", optional = true }
async-trait = { version = "0.1", optional = true }
async-std = { version = "1.13", optional = true }
futures = { version = "0.3", optional = true }
oval = { version = "2.0", optional = true }
serde_cbor = { workspace = true, optional = true }

[build-dependencies]
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
wows-data-mgr = { path = "../wows-data-mgr" }

[features]
arc = []
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
json = ["dep:serde_json", "serde"]
# Core parsing/processing: gates heavy deps (memmap2, pickled, winnow, etc.) and
# modules that use them (data, game_data, game_params, models, rpc, export, game_constants).
# Without this feature, only lightweight type modules are available (game_types, recognized, error).
parsing = [
    "dep:memmap2",
    "dep:pickled",
    "dep:winnow",
    "dep:variantly",
    "dep:roxmltree",
    "dep:gettext",
    "dep:bon",
    "dep:convert_case",
    "dep:itertools",
]
vfs = ["arc", "dep:vfs", "dep:oval", "parsing"]
async_vfs = ["vfs/async-vfs", "arc", "vfs", "dep:futures", "dep:async-std", "dep:async-trait"]
models = [
    "dep:gltf-json",
    "dep:gltf",
    "dep:half",
    "dep:image_dds",
    "dep:image",
    "dep:unidecode",
    "dep:meshopt-rs",
    "vfs",
]
bin = [
    "dep:clap",
    "dep:csv",
    "dep:glob",
    "dep:rayon",
    "dep:regex",
    "dep:indicatif",
    "dep:thread_local",
    "models",
    "arc",
    "json",
    "vfs",
]
default = ["bin"]
cbor = ["dep:serde_cbor", "serde"]
