[package]
name = "wt-translations"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/landaire/wows-toolkit"
description = "Translation key mappings, TextResolver trait, and language metadata for WoWs Toolkit"

[dependencies]
wowsunpack = { workspace = true, default-features = false }
